--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div id="meal">
                     <div class="meal-item">
                         <div class="meal-img">
-                            <img src="f4.jpg" alt="food">
+                            <img src="https://i.ibb.co/bzWZykZ/f4.jpg" alt="food">
                         </div>
                     <div class="meal-name">
                         <h3>Potato Chips</h3>
@@ -44,7 +44,7 @@
                     </div>
                     <div class="meal-item">
                         <div class="meal-img">
-                            <img src="f4.jpg" alt="food">
+                            <img src="https://i.ibb.co/bzWZykZ/f4.jpg" alt="food">
                         </div>
                     <div class="meal-name">
                         <h3>Potato Chips</h3>
@@ -54,7 +54,7 @@
                     </div>
                     <div class="meal-item">
                         <div class="meal-img">
-                            <img src="f4.jpg" alt="food">
+                            <img src="https://i.ibb.co/bzWZykZ/f4.jpg" alt="food">
                         </div>
                     <div class="meal-name">
                         <h3>Potato Chips</h3>
@@ -84,7 +84,7 @@
                            </p>
                     </div>
                     <div class="recipe-meal-img">
-                        <img src="f4.jpg" alt="">
+                        <img src="https://i.ibb.co/bzWZykZ/f4.jpg" alt="">
                     </div>
                     <div class="recipe-link">
                         <a href="#" target="_blank">Watch video</a>
