--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="meal-search">
                 <h2 class="title">Find Meals for Your Ingredients</h2>
                 <blockquote>Real food doesn't have ingredients, real food is ingredients.<br>
-                    <cite>-Hillary Ochieng</cite>
+                    <cite>-Hillary Serel</cite>
                 </blockquote>
               <div class="meal-search-box">
                 <input type="text" class="search-control"
